overflow issue

--- a/styles/_general.scss
+++ b/styles/_general.scss
@@ -21,8 +21,12 @@ $fourth-linear: linear-gradient(#92D3A0, #B7DF62);
 body {
   font-family: 'Assistant', sans-serif;
   font-weight: 300;
-  overflow-x: hidden !important;
+  overflow-x: hidden;
   margin: 0 auto;
+}
+
+header, main, footer {
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
